; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_inval.c_MakeSharedInvalidMessagesArray.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_inval.c_MakeSharedInvalidMessagesArray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SharedInvalidMessagesArray = common dso_local global i32* null, align 8
@FIRSTCHUNKSIZE = common dso_local global i32 0, align 4
@maxSharedInvalidMessagesArray = common dso_local global i32 0, align 4
@numSharedInvalidMessagesArray = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @MakeSharedInvalidMessagesArray to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @MakeSharedInvalidMessagesArray(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** @SharedInvalidMessagesArray, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load i32, i32* @FIRSTCHUNKSIZE, align 4
  store i32 %8, i32* @maxSharedInvalidMessagesArray, align 4
  store i32 0, i32* @numSharedInvalidMessagesArray, align 4
  %9 = load i32, i32* @maxSharedInvalidMessagesArray, align 4
  %10 = sext i32 %9 to i64
  %11 = mul i64 %10, 4
  %12 = trunc i64 %11 to i32
  %13 = call i32* @palloc(i32 %12)
  store i32* %13, i32** @SharedInvalidMessagesArray, align 8
  br label %14

14:                                               ; preds = %7, %2
  %15 = load i32, i32* @numSharedInvalidMessagesArray, align 4
  %16 = load i32, i32* %4, align 4
  %17 = add nsw i32 %15, %16
  %18 = load i32, i32* @maxSharedInvalidMessagesArray, align 4
  %19 = icmp sgt i32 %17, %18
  br i1 %19, label %20, label %37

20:                                               ; preds = %14
  br label %21

21:                                               ; preds = %27, %20
  %22 = load i32, i32* @numSharedInvalidMessagesArray, align 4
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %22, %23
  %25 = load i32, i32* @maxSharedInvalidMessagesArray, align 4
  %26 = icmp sgt i32 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %21
  %28 = load i32, i32* @maxSharedInvalidMessagesArray, align 4
  %29 = mul nsw i32 %28, 2
  store i32 %29, i32* @maxSharedInvalidMessagesArray, align 4
  br label %21

30:                                               ; preds = %21
  %31 = load i32*, i32** @SharedInvalidMessagesArray, align 8
  %32 = load i32, i32* @maxSharedInvalidMessagesArray, align 4
  %33 = sext i32 %32 to i64
  %34 = mul i64 %33, 4
  %35 = trunc i64 %34 to i32
  %36 = call i32* @repalloc(i32* %31, i32 %35)
  store i32* %36, i32** @SharedInvalidMessagesArray, align 8
  br label %37

37:                                               ; preds = %30, %14
  %38 = load i32*, i32** @SharedInvalidMessagesArray, align 8
  %39 = load i32, i32* @numSharedInvalidMessagesArray, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  %42 = load i32*, i32** %3, align 8
  %43 = load i32, i32* %4, align 4
  %44 = sext i32 %43 to i64
  %45 = mul i64 %44, 4
  %46 = trunc i64 %45 to i32
  %47 = call i32 @memcpy(i32* %41, i32* %42, i32 %46)
  %48 = load i32, i32* %4, align 4
  %49 = load i32, i32* @numSharedInvalidMessagesArray, align 4
  %50 = add nsw i32 %49, %48
  store i32 %50, i32* @numSharedInvalidMessagesArray, align 4
  ret void
}

declare dso_local i32* @palloc(i32) #1

declare dso_local i32* @repalloc(i32*, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
